<?xml version="1.0"?>
<package format="2">
  <name>slambot</name>
  <version>1.0.0</version>
  <description>The nox robot main package</description>

  <maintainer email="r-baran@hotmail.fr">Robin Baran</maintainer>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/Robots/Nox</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <build_depend>move_base</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>navfn</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

</package>
